[gd_scene load_steps=2 format=3 uid="uid://brla5jo2jb5fd"]

[ext_resource type="Script" path="res://scripts/scoring.gd" id="1_v3mri"]

[node name="ScoreArea" type="Area2D"]
script = ExtResource("1_v3mri")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
